fix carousel assigning wrong width on refresh

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -8,7 +8,7 @@
 
 .header {
   display: flex;
-  margin-top: 8rem;
+  margin-top: 7.5rem;
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -22,7 +22,6 @@
     flex-direction: column;
     gap: 2rem;
     margin-top: auto;
-    height: auto;
     .header__main-button {
       position: static;
     }
@@ -91,8 +90,8 @@
   & > img {
     width: 100%;
     height: 100vh;
-    object-fit: cover;
     min-height: 750px;
+    object-fit: cover;
   }
 }
 .header__main-button {
